--- a/flask/app/templates/embed.html
+++ b/flask/app/templates/embed.html
@@ -28,7 +28,7 @@
 
         <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-        <script src="/static/js/script.js"></script>
+        <script src="/static/js/embed_script.js"></script>
 
 
 
@@ -52,22 +52,7 @@
 {% block body %}
 {% autoescape false %}
 <body>
-  <header class="w3-bar w3-light-green">
-  	<img src="static/img/logo.svg" class="w3-image" width="200" height="200">
-  	<span class="logo_text">taxameter.ru</span>
-  	<span onclick="switch_lang()" class="w3-right w3-button">{{lang_sw}}</span>
-  </header>
-
-  <div class="w3-row w3-margin w3-padding">
-    <div class="w3-col w3-row w3-padding-24 w3-section">
-      <div class="w3-col text" style="width:70%">{{welcome_text}}</div>
-      <div class="w3-right text" style="width:20%">
-        <p>{{together_text}} <a  href="https://corgi.center/"> <img height="20" src="/static/img/corgi.svg"></a></p>
-        <p>{{enabled_text}} <a href="https://www.gisaid.org/"> <img height="20" src="/static/img/gisaid.svg"></a></p>
-        <p>{{last_update_text}}</p>
-      </div>
-    </div>
-    <div class="w3-col w3-row w3-padding-24 w3-section">
+    <div class="w3-row">
       <div class="w3-col w3-row w3-light-green w3-section w3-round-large">
         <div class="w3-row w3-col l3">
           <div class="w3-section w3-padding w3-col">
@@ -189,16 +174,6 @@
       </div>
     </div>
   </div>
-
-  <footer class="w3-container w3-padding-64 w3-center w3-opacity">
-    <div class="text w3-padding-32">
-      <p>{{definition_begining_text}} <a href="https://faculty.skoltech.ru/people/georgiibazykin">{{lab_name_text}}</a> {{definition_end_text}}</p>
-      <p><a href="">{{DK_name_text}}</a>, <a href="">{{EN_name_text}}</a>, <a href="https://twitter.com/garushyants">{{SG_name_text}}</a>, <a href="https://twitter.com/gbazykin">{{GB_name_text}}</a></p>
-      <p>{{questions_text}}</p>
-      <p>{{cite_text}}</p>
-   </div>
-   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-  </footer>
 
   <script>
     var mutations = {{mutations_names}};
