embed design changed

--- a/flask/app/templates/embed.html
+++ b/flask/app/templates/embed.html
@@ -52,129 +52,125 @@
 {% block body %}
 {% autoescape false %}
 <body>
-    <div class="w3-row">
-      <div class="w3-col w3-row w3-light-green w3-section w3-round-large">
-        <div class="w3-row w3-col l3">
-          <div class="w3-section w3-padding w3-col">
-            <p class="w3-strong w3-margin w3-margin-top w3-margin-bottom text">
-              {{date_slider_text}}
-            </p>
-            <div class="w3-container w3-padding w3-col">
-              <div id="dateRangeSlider"></div>
-            </div>
-          </div>
-          <div class="w3-row">
-            <div onclick="home()" class="w3-border-top w3-border-bottom w3-border-left w3-padding-24 w3-button w3-theme-d5 w3-hover-blue w3-col l11 m11 s11 w3-border-right further_information" id="homeButton">
-              <p class="w3-center" style="display:inline;"> {{home_button_text}} </p>
-            </div>
-            <div onclick="certainMutations()" class="w3-border-top w3-border-bottom w3-border-left w3-padding-24 w3-button w3-theme-d5 w3-hover-blue w3-col l11 m11 s11 w3-border-right further_information" id="certainMutationsButton">
-              <p style="display:inline;"> {{mutation_button_text}} </p>
-            </div>
-          </div>
-          <div class="w3-section w3-col certainMutationSection">
-            <div class="w3-section w3-padding w3-col">
-              <div class="w3-strong w3-margin text">
-                {{variables_text}}
-              </div>
-              <div class="w3-strong w3-margin text w3-row">
-                <div class="w3-col l4 m4 s4">
-                  {{lineage_choice_button_text}}
-                </div>
-                <div class="w3-col l4 m4 s4">
-                  <label class="switch">
-                    <input type="checkbox" onclick="switchToLineage()">
-                    <span class="slider round"></span>
-                  </label>
-                </div>
-                <div class="w3-col l4 m4 s4">
-                  {{gene_choice_button_text}}
-                </div>
-              </div>
-              <div id="geneMutationSection" style="display:none">
-                <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col">
-                  <button onclick="mainDropdown()" class="w3-btn w3-black my-btn" style="min-width: 100%">
-                    <p style="display:inline;">{{gene_choice_button_text}}:</p>
-                    <p style="display:inline;" id="geneDropdownButtonText"></p>
-                  </button>
-                  <div id="gene" class="w3-dropdown-content w3-bar-block w3-border" style="max-height:250px; overflow:auto;"></div>
-                </div>
-                <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col " id="mutation">
-                  <button class="w3-btn w3-black my-btn" id="mutationDropdownButton" style="min-width: 100%">
-                    <p style="display:inline;">{{mutation_choice_button_text}}</p>
-                    <p style="display:inline;" id="mutationDropdownButtonText"></p>
-                    <p style="display:inline;" id="mutationNameDropdownButtonText"></p>
-                  </button>
-                </div>
-                <div>
-                  <p class="w3-strong w3-margin text">
-                    {{example_text}}
-                    <a href="/embed?mutation=S:N501Y&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">S:N501Y</a>,
-                    <a href="/embed?mutation=N:A211V&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">N:A211V</a>
-                  </p>
-                </div>
-              </div>
-              <div id="lineageSection">
-                <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col">
-                  <button onclick="lineageDropdown()" class="w3-btn w3-black my-btn" style="min-width: 100%">
-                    <p style="display:inline;">{{lineage_choice_button_text}}:</p>
-                    <p style="display:inline;" id="lineageDropdownButtonText"></p>
-                  </button>
-                  <div id="lineage" class="w3-dropdown-content w3-bar-block w3-border" style="max-height:250px; overflow:auto;"></div>
-                </div>
-                <div>
-                  <p class="w3-strong w3-margin text">
-                    {{example_text}}
-                    <a href="/embed?mutation=lineage:B.1.1.7&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Alpha (B.1.1.7)</a>,
-                    <a href="/embed?mutation=lineage:B.1.351&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Beta (B.1.351)</a>,
-                    <a href="/embed?mutation=lineage:B.1.617.2&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Delta (B.1.617.2)</a>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="w3-border w3-margin w3-btn w3-black my-btn w3-col" style="min-width: 90%" id="update">
-            <p>{{update_button_text}}</p>
-          </div>
-          <div class="w3-section w3-col certainMutationSection">
-            <div onclick="outbreakInfoLink('{{outbreak_info_link}}')" class="w3-margin w3-btn w3-col further_information w3-theme-d5 my-btn" id="updateDate">
-              <p style="display:inline;">{{further_information_text}} {{mutation}}  {{resourses_text}}</p>
-            </div>
-          </div>
+  <div class="w3-row w3-light-green">
+    <div class="w3-row w3-col l3">
+      <div class="w3-section w3-padding w3-col">
+        <p class="w3-strong w3-margin w3-margin-top w3-margin-bottom text">
+          {{date_slider_text}}
+        </p>
+        <div class="w3-container w3-padding w3-col">
+          <div id="dateRangeSlider"></div>
         </div>
-        <div class="w3-col l9">
-          <div class="certainMutationSection">
-            <div class="w3-margin-right w3-section">
-              <p class="plot_name">{{map_name_text}} {{mutation}}</p>
-              <div id="coronamapLoader" class="w3-white loader">
-                <span class="helper"></span>
-                <img src="/static/img/Taksa.gif" class="center">
-              </div>
-              <div id="coronamap"></div>
+      </div>
+      <div class="w3-row">
+        <div onclick="home()" class="w3-border-top w3-border-bottom w3-border-left w3-padding-24 w3-button w3-theme-d5 w3-hover-blue w3-col l11 m11 s11 w3-border-right further_information" id="homeButton">
+          <p class="w3-center" style="display:inline;"> {{home_button_text}} </p>
+        </div>
+        <div onclick="certainMutations()" class="w3-border-top w3-border-bottom w3-border-left w3-padding-24 w3-button w3-theme-d5 w3-hover-blue w3-col l11 m11 s11 w3-border-right further_information" id="certainMutationsButton">
+          <p style="display:inline;"> {{mutation_button_text}} </p>
+        </div>
+      </div>
+      <div class="w3-section w3-col certainMutationSection">
+        <div class="w3-section w3-padding w3-col">
+          <div class="w3-strong w3-margin text">
+            {{variables_text}}
+          </div>
+          <div class="w3-strong w3-margin text w3-row">
+            <div class="w3-col l4 m4 s4">
+              {{lineage_choice_button_text}}
+            </div>
+            <div class="w3-col l4 m4 s4">
+              <label class="switch">
+                <input type="checkbox" onclick="switchToLineage()">
+                <span class="slider round"></span>
+              </label>
+            </div>
+            <div class="w3-col l4 m4 s4">
+              {{gene_choice_button_text}}
             </div>
           </div>
-          <div class="homeSection">
-            <div class="w3-margin-right w3-section">
-              <p class="plot_name">{{main_map_name_text}}</p>
-              <div id="maincoronamapLoader" class="w3-white loader">
-                <span class="helper"></span>
-                <img src="/static/img/Taksa.gif" class="center">
-              </div>
-              <div id="maincoronamap"></div>
+          <div id="geneMutationSection" style="display:none">
+            <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col">
+              <button onclick="mainDropdown()" class="w3-btn w3-black my-btn" style="min-width: 100%">
+                <p style="display:inline;">{{gene_choice_button_text}}:</p>
+                <p style="display:inline;" id="geneDropdownButtonText"></p>
+              </button>
+              <div id="gene" class="w3-dropdown-content w3-bar-block w3-border" style="max-height:250px; overflow:auto;"></div>
             </div>
-            <div class="w3-margin-right w3-section">
-              <p class="plot_name">{{plot_name_text}}</p>
-              <div id="coronaplotLoader" class="w3-white loader">
-                <span class="helper"></span>
-                <img src="/static/img/Taksa.gif" class="center">
-              </div>
-              <div id="coronaplot"></div>
+            <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col " id="mutation">
+              <button class="w3-btn w3-black my-btn" id="mutationDropdownButton" style="min-width: 100%">
+                <p style="display:inline;">{{mutation_choice_button_text}}</p>
+                <p style="display:inline;" id="mutationDropdownButtonText"></p>
+                <p style="display:inline;" id="mutationNameDropdownButtonText"></p>
+              </button>
+            </div>
+            <div>
+              <p class="w3-strong w3-margin text">
+                {{example_text}}
+                <a href="/embed?mutation=S:N501Y&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">S:N501Y</a>,
+                <a href="/embed?mutation=N:A211V&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">N:A211V</a>
+              </p>
+            </div>
+          </div>
+          <div id="lineageSection">
+            <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col">
+              <button onclick="lineageDropdown()" class="w3-btn w3-black my-btn" style="min-width: 100%">
+                <p style="display:inline;">{{lineage_choice_button_text}}:</p>
+                <p style="display:inline;" id="lineageDropdownButtonText"></p>
+              </button>
+              <div id="lineage" class="w3-dropdown-content w3-bar-block w3-border" style="max-height:250px; overflow:auto;"></div>
+            </div>
+            <div>
+              <p class="w3-strong w3-margin text">
+                {{example_text}}
+                <a href="/embed?mutation=lineage:B.1.1.7&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Alpha (B.1.1.7)</a>,
+                <a href="/embed?mutation=lineage:B.1.351&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Beta (B.1.351)</a>,
+                <a href="/embed?mutation=lineage:B.1.617.2&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Delta (B.1.617.2)</a>
+              </p>
             </div>
           </div>
         </div>
       </div>
+      <div class="w3-border w3-margin w3-btn w3-black my-btn w3-col" style="min-width: 90%" id="update">
+        <p>{{update_button_text}}</p>
+      </div>
+      <div class="w3-section w3-col certainMutationSection">
+        <div onclick="outbreakInfoLink('{{outbreak_info_link}}')" class="w3-margin w3-btn w3-col further_information w3-theme-d5 my-btn" id="updateDate">
+          <p style="display:inline;">{{further_information_text}} {{mutation}}  {{resourses_text}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col l9">
+      <div class="certainMutationSection">
+        <div class="w3-margin-right w3-section">
+          <p class="plot_name">{{map_name_text}} {{mutation}}</p>
+          <div id="coronamapLoader" class="w3-white loader">
+            <span class="helper"></span>
+            <img src="/static/img/Taksa.gif" class="center">
+          </div>
+          <div id="coronamap"></div>
+        </div>
+      </div>
+      <div class="homeSection">
+        <div class="w3-margin-right w3-section">
+          <p class="plot_name">{{main_map_name_text}}</p>
+          <div id="maincoronamapLoader" class="w3-white loader">
+            <span class="helper"></span>
+            <img src="/static/img/Taksa.gif" class="center">
+          </div>
+          <div id="maincoronamap"></div>
+        </div>
+        <div class="w3-margin-right w3-section">
+          <p class="plot_name">{{plot_name_text}}</p>
+          <div id="coronaplotLoader" class="w3-white loader">
+            <span class="helper"></span>
+            <img src="/static/img/Taksa.gif" class="center">
+          </div>
+          <div id="coronaplot"></div>
+        </div>
+      </div>
     </div>
   </div>
-
   <script>
     var mutations = {{mutations_names}};
     init(mutations);
