Delta bug reversed

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -141,7 +141,7 @@
                     {{example_text}}
                     <a href="/?mutation=lineage:B.1.1.7&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Alpha (B.1.1.7)</a>,
                     <a href="/?mutation=lineage:B.1.351&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Beta (B.1.351)</a>,
-                    <a href="/?mutation=lineage:Delta&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Delta (B.1.617.2)</a>
+                    <a href="/?mutation=lineage:B.1.617.2&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Delta (B.1.617.2)</a>
                   </p>
                 </div>
               </div>
