Omicron added to examples

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -142,6 +142,7 @@
                     <a href="/?mutation=lineage:B.1.1.7&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Alpha (B.1.1.7)</a>,
                     <a href="/?mutation=lineage:B.1.351&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Beta (B.1.351)</a>,
                     <a href="/?mutation=lineage:B.1.617.2&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Delta (B.1.617.2)</a>
+                    <a href="/?mutation=lineage:BA.1&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Omicron (BA.1)</a>
                   </p>
                 </div>
               </div>
