--- a/flask/app/templates/embed.html
+++ b/flask/app/templates/embed.html
@@ -125,7 +125,7 @@
                 {{example_text}}
                 <a href="/embed?mutation=lineage:B.1.1.7&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Alpha (B.1.1.7)</a>,
                 <a href="/embed?mutation=lineage:B.1.351&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Beta (B.1.351)</a>,
-                <a href="/embed?mutation=lineage:B.1.617.2&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Delta (B.1.617.2)</a>
+                <a href="/embed?mutation=lineage:B.1.617.2&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Delta (B.1.617.2)</a>,
                 <a href="/?mutation=lineage:BA.1&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Omicron (BA.1)</a>
               </p>
             </div>
